<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    
    <TextView
        android:layout_alignParentStart="true"
        android:id="@+id/txtAlias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alias"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_below="@id/txtAlias"/>

    <Button
        android:id="@+id/btnEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        android:layout_below="@id/txtAlias"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/btnDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:layout_toStartOf="@id/btnEncrypt"
        android:layout_below="@id/txtAlias"/>

    
    
</RelativeLayout>
